@@ -4134,6 +4134,8 @@ int cram_seek(cram_fd *fd, off_t offset, int whence) {
 
     fd->ooc = 0;
 
+    cram_drain_rqueue(fd);
+
     if (hseek(fd->fp, offset, whence) >= 0) {
         return 0;
     }
@@ -4194,17 +4196,21 @@ int cram_close(cram_fd *fd) {
 	    return -1;
     }
 
+    if (fd->mode != 'w')
+	cram_drain_rqueue(fd);
+
     if (fd->pool && fd->eof >= 0) {
 	hts_tpool_process_flush(fd->rqueue);
 
 	if (0 != cram_flush_result(fd))
 	    return -1;
 
+	if (fd->mode == 'w')
+	    fd->ctr = NULL; // prevent double freeing
+
 	pthread_mutex_destroy(&fd->metrics_lock);
 	pthread_mutex_destroy(&fd->ref_lock);
 	pthread_mutex_destroy(&fd->bam_list_lock);
-
-	fd->ctr = NULL; // prevent double freeing
 
 	//fprintf(stderr, "CRAM: destroy queue %p\n", fd->rqueue);
 
@@ -4404,8 +4410,7 @@ int cram_set_voption(cram_fd *fd, enum hts_fmt_option opt, va_list args) {
 	break;
 
     case CRAM_OPT_RANGE:
-	fd->range = *va_arg(args, cram_range *);
-	return cram_seek_to_refpos(fd, &fd->range);
+	return cram_seek_to_refpos(fd, va_arg(args, cram_range *));
 
     case CRAM_OPT_REFERENCE:
 	return cram_load_reference(fd, va_arg(args, char *));
@@ -4444,6 +4449,7 @@ int cram_set_voption(cram_fd *fd, enum hts_fmt_option opt, va_list args) {
 	    fd->rqueue = hts_tpool_process_init(fd->pool, nthreads*2, 0);
 	    pthread_mutex_init(&fd->metrics_lock, NULL);
 	    pthread_mutex_init(&fd->ref_lock, NULL);
+	    pthread_mutex_init(&fd->range_lock, NULL);
 	    pthread_mutex_init(&fd->bam_list_lock, NULL);
 	    fd->shared_ref = 1;
 	    fd->own_pool = 1;
@@ -4460,6 +4466,7 @@ int cram_set_voption(cram_fd *fd, enum hts_fmt_option opt, va_list args) {
 						0);
 	    pthread_mutex_init(&fd->metrics_lock, NULL);
 	    pthread_mutex_init(&fd->ref_lock, NULL);
+	    pthread_mutex_init(&fd->range_lock, NULL);
 	    pthread_mutex_init(&fd->bam_list_lock, NULL);
 	}
 	fd->shared_ref = 1; // Needed to avoid clobbering ref between threads
